# modid-db-sylv

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  rustfmt.toml  sqlx-data.json
.github/workflows/: rust_checks.yml
src/: error.rs  main.rs  test.rs  util.rs
src/routes/: mod.rs
src/routes/v0/: mod.rs  mods.rs
src/routes/v1/: mod.rs  mod_db.rs  mods.rs
src/task/: mod.rs  retrieve_jar.rs
