[package]
name = "sylv-api"
description = "The backend for sylv.gay."
version = "0.1.0"
edition = "2021"
rust-version = "1.69" # interesting

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ferinth = { git = "https://github.com/SylvKT/ferinth.git", branch = "search" }
owo-colors = "3"
time = "0.3.21"
actix-web = "4"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "offline", "macros", "json", "offline"] }
pico-args = "0.5.0"
thiserror = "1"
